# poetry-package-test

./: pyproject.toml
simple_package/: __init__.py
tests/: test_simple_package.py
