[tool.poetry]
name = "simple-package"
version = "0.1.0"
description = ""
authors = ["doomleika <doomleika@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
